Fix the line wrap for popup

--- a/README.qmd
+++ b/README.qmd
@@ -27,15 +27,15 @@ I will introduce the following features of leaflet as I show my results of the v
 
 - Use the `popup` argument to add pop up the relevant information upon click, such as:
 
-    USAFID: 724016
-    Name: CHARLOTTESVILLE ALBEMARLE ARPT
-    Number of records: 1027
-    Wind speed: 1.5 km/h
-    Temperature: 23.3℃
-    Dew point: 18.9℃
-    Atmospheric pressure: 1014.9 hPa
-    Relative humidity: 76.6%
-    Distance score: 1.3
+    USAFID: 724016  
+    Name: CHARLOTTESVILLE ALBEMARLE ARPT  
+    Number of records: 1027  
+    Wind speed: 1.5 km/h  
+    Temperature: 23.3℃  
+    Dew point: 18.9℃  
+    Atmospheric pressure: 1014.9 hPa  
+    Relative humidity: 76.6%  
+    Distance score: 1.3  
 
 - Use `addCircles` add circles to the map for the top 10 or top 10% representative stations in each state in terms of all the weather conditions, using circle size to visualize the number of records and color to visualize the euclidean distance, and use `addLegend` to add color legend for the distance score;
 
@@ -57,7 +57,7 @@ Thinking about the following problems:
 
 All above are the motivations for a [Shiny](https://shiny.rstudio.com/) app, which makes it easy to build interactive web apps straight from R.
 
-I am going to start with a brief introduction of the structure of a Shiny app - ui and server. I will also add some useful links, such as [Shiny Gallery](https://shiny.rstudio.com/gallery/), [Shiny Learning Resources](https://shiny.rstudio.com/tutorial/) and [shinyWidgets](https://shinyapps.dreamrs.fr/shinyWidgets/) for reference.
+I am going to start with a brief introduction of the structure of a Shiny app - ui and server. I will also add some useful links, such as [Shiny Gallery](https://shiny.rstudio.com/gallery/), [Shiny Learning Resources](https://shiny.rstudio.com/tutorial/) and [shinyWidgets](https://shinyapps.dreamrs.fr/shinyWidgets/), for reference.
 
 To add flexibility and dynamic to the analysis, my Shiny app with include:
 
