--- a/Slides.qmd
+++ b/Slides.qmd
@@ -21,7 +21,9 @@ slides_eval <- TRUE
 
 ::: {style="font-size: 20pt"}
 
-To wrap our heads around things, let's start by diving into the [COVID-19 tracker app](https://shiny.rstudio.com/gallery/covid19-tracker.html) and getting a feel for what it's all about!
+To wrap our heads around things, let's start by diving into the 
+[COVID-19 tracker app](https://shiny.rstudio.com/gallery/covid19-tracker.html) 
+and getting a feel for what it's all about!
 
 :::
 
@@ -31,15 +33,21 @@ To wrap our heads around things, let's start by diving into the [COVID-19 tracke
 
 What we'll be using
 
-1. **Leaflet**: "Create Interactive Web Maps with the JavaScript 'Leaflet' Library" ([read more](https://cran.r-project.org/web/packages/leaflet/)).
+1. **Leaflet**: "Create Interactive Web Maps with the JavaScript 'Leaflet' Library" 
+([read more](https://cran.r-project.org/web/packages/leaflet/)).
 
-2. **plotly**: "Create Interactive Web Graphics via 'plotly.js'" ([read more](https://cran.r-project.org/web/packages/plotly/))
+2. **plotly**: "Create Interactive Web Graphics via 'plotly.js'" 
+([read more](https://cran.r-project.org/web/packages/plotly/))
 
-3. **DT**: "A Wrapper of the JavaScript Library 'DataTables'" ([read more](https://cran.r-project.org/web/packages/DT/))
+3. **DT**: "A Wrapper of the JavaScript Library 'DataTables'" 
+([read more](https://cran.r-project.org/web/packages/DT/))
 
-4. **shiny**: "Web Application Framework for R" ([read more](https://cran.r-project.org/web/packages/shiny/))
+4. **shiny**: "Web Application Framework for R" 
+([read more](https://cran.r-project.org/web/packages/shiny/))
 
-We will adopt the the practice in Part 3, [Lab 3](https://uofuepibio.github.io/PHS7045-advanced-programming/week-03-lab.html), visualizing the representative USAF station(s) for weather conditions.
+We will adopt the the practice in Part 3, 
+[Lab 3](https://uofuepibio.github.io/PHS7045-advanced-programming/week-03-lab.html), 
+visualizing the representative USAF station(s) for weather conditions.
 
 :::
 
@@ -49,7 +57,9 @@ We will adopt the the practice in Part 3, [Lab 3](https://uofuepibio.github.io/P
 
 ::: {style="font-size: 20pt"}
 
-The met data contains the records of weather conditions, including wind speed, temperature, dew point, atmospheric pressure, and relative humidity, at USAF stations in August 2019.
+The met data contains the records of weather conditions, 
+including wind speed, temperature, dew point, atmospheric pressure, and relative humidity, 
+at USAF stations in August 2019.
 
 ```{r}
 # ---- load data.table package ----
@@ -122,7 +132,8 @@ kable(met_station, row.names = T) |> kable_styling(font_size = 12) |> scroll_box
 
 ::: {style="font-size: 20pt"}
 
-Write a function to identify the representative station(s), at state or country level,  by euclidean distance. User can specify the weather condition(s) of interest and number and/or percentage of the representative.
+Write a function to identify the representative station(s), at state or country level,  by euclidean distance. 
+User can specify the weather condition(s) of interest and number and/or percentage of the representative.
 
 ```{r}
 sta_represent <- function(
@@ -188,7 +199,8 @@ if(!require("leaflet", quietly = TRUE)) install.packages("leaflet")
 library(leaflet)
 ```
 
-There are several forms of spatial data which can be processed by leaflet. We will only focus on data frame with lng/lat columns from base R.
+There are several forms of spatial data which can be processed by leaflet. 
+We will only focus on data frame with lng/lat columns from base R.
 
 The essential steps to build a Leaflet map include: 
 
@@ -210,7 +222,7 @@ The essential steps to build a Leaflet map include:
 
 We can create a map widget by simply calling `leaflet()`.
 
-```{r out.width="100%"}
+```{r, out.width="100%", out.height="400px"}
 m <- leaflet()
 m
 ```
@@ -221,7 +233,8 @@ m
 
 ::: {style="font-size: 20pt"}
 
-The easiest way to add tiles is by calling `addTiles()` with no arguments; by default, [OpenStreetMap](https://www.openstreetmap.org/#map=2/13.2/-113.3) tiles are used.
+The easiest way to add tiles is by calling `addTiles()` with no arguments; 
+by default, [OpenStreetMap](https://www.openstreetmap.org/#map=2/13.2/-113.3) tiles are used.
 
 ```{r, out.width="100%", out.height="400px"}
 m |> addTiles()
@@ -233,7 +246,10 @@ m |> addTiles()
 
 ::: {style="font-size: 20pt"}
 
-Alternatively, many popular free third-party basemaps can be added using the `addProviderTiles()` function, which is implemented using the leaflet-providers plugin. See [here](http://leaflet-extras.github.io/leaflet-providers/preview/index.html) for the complete set. You can use `names(providers)` to view all of the options.
+Alternatively, many popular free third-party basemaps can be added using the `addProviderTiles()` function, 
+which is implemented using the leaflet-providers plugin. 
+See [here](http://leaflet-extras.github.io/leaflet-providers/preview/index.html) for the complete set. 
+You can use `names(providers)` to view all of the options.
 
 ```{r, out.width="100%", out.height="400px"}
 m <- leaflet() |> addProviderTiles(providers$CartoDB.Positron)
@@ -248,7 +264,8 @@ m
 
 - `setView()` sets the center of the map view and the zoom level;
 - `fitBounds()` fits the view into the rectangle [lng1, lat1] – [lng2, lat2];
-- `clearBounds()` clears the bound, so that the view will be automatically determined by the range of latitude/longitude data in the map layers if provided.
+- `clearBounds()` clears the bound, so that the view will be automatically determined 
+by the range of latitude/longitude data in the map layers if provided.
 
 ```{r, out.width="100%", out.height="400px"}
 m |> setView(lng = -111.8272, lat = 40.7648, zoom = 17)
